# ConvertX

./: .gitignore  LICENSE  README.md  pubspec.yaml
lib/: main.dart
lib/src/providers/: conversion_provider.dart  ffmpeg_provider.dart  settings_provider.dart
lib/src/rust/: bridge.dart  rust.dart
lib/src/screens/: home_screen.dart  settings_screen.dart
lib/src/widgets/: convert_panel.dart  file_drop_zone.dart  progress_list.dart  resizable_divider.dart
macos/: .gitignore
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build.rs  flutter_rust_bridge.yaml
rust/.cargo/: config.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/converters/: config.rs  document.rs  image.rs  media.rs  mod.rs
script/: build_windows_installer.ps1  build_windows_portable_zip.ps1  convertx.iss  readme.md
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
