[package]
name = "convertx_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
image = "0.25"
lopdf = "0.34"
comrak = "0.31"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
flutter_rust_bridge = "=2.11.1"
walkdir = "2.5"
regex = "1.10"
headless_chrome = "1.0"
urlencoding = "2.1"

[build-dependencies]
flutter_rust_bridge_codegen = "2"
